--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -1,5 +1,37 @@
 # How it works
+This program is broken up into two parts:
+- The job of taking process and socket information and organizing it into tables that can be easily queried
+- The job of deciphering the statuses of the connections and grouping like connections together
+## Part 1: Decipher 
+The program starts by running two commands to get process and socket information:
+```
+ps -ao pid,args -w --no-headers | grep "[s]sh .*" > /tmp/ssh_ps
+```
+and
+```
+ss -nap | grep "ssh\"" > /tmp/ssh_ss
+```
 
-This program works in 2 main parts:
-- (1)
-- (2)
+The next part of the program is to use regex to query these and put them into a list
+
+### Process Organization
+These are organized into the following formats
+
+```
+[ org_code, pid, ssh_type, command, arguments ]
+```
+
+the arguments have a few variations:
+
+Master Sockets:
+```
+[ username, destination, port, socket_file ]
+```
+Forward via MS:
+```
+[ socket_file, socket_name ]
+```
+Traditional Tunnel:
+```
+[ username, destination, port, [ local_port, forward_ip, forward_port ], [ ... ]]
+```
