--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -35,3 +35,14 @@ Traditional Tunnel:
 ```
 [ username, destination, port, [ local_port, forward_ip, forward_port ], [ ... ]]
 ```
+## Socket Organization:
+These are organized into the following formats
+
+Master Socket:
+```
+[ org_code, pid, socket_type, socket_file, socket_code ]
+```
+Other Sockets:
+```
+[ org_code, pid, socket_type, src, dst ]
+```
