--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -35,7 +35,7 @@ Traditional Tunnel:
 ```
 [ username, destination, port, [ local_port, forward_ip, forward_port ], [ ... ]]
 ```
-## Socket Organization:
+### Socket Organization:
 These are organized into the following formats
 
 Master Socket:
