--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -35,6 +35,10 @@ Traditional Tunnel:
 ```
 [ username, destination, port, [ local_port, forward_ip, forward_port ], [ ... ]]
 ```
+Other Session:
+```
+[ username, destination, port ]
+```
 ### Socket Organization:
 These are organized into the following formats
 
@@ -46,3 +50,10 @@ Other Sockets:
 ```
 [ org_code, pid, socket_type, src, dst ]
 ```
+## Part 2: Figure out what it means
+| ord_code | description |
+| - | - |
+| 0 | unassigned |
+| 1 | parent (MS or TRAD) |
+| 2 | child (S or SH) |
+| 3 | independent (I) |
