--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -56,4 +56,5 @@ Other Sockets:
 | 0 | unassigned |
 | 1 | parent (MS or TRAD) |
 | 2 | child (S or SH) |
-| 3 | independent (I) |
+| 3 | independent (SH) |
+| 4 | malformed (ANY) |
