--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -53,8 +53,8 @@ Other Sockets:
 ## Part 2: Figure out what it means
 | ord_code | description |
 | - | - |
-| 0 | unassigned |
-| 1 | parent (MS or TRAD) |
-| 2 | child (S or SH) |
+| 0 | unassigned (DEFAULT) |
+| 1 | Parent of another SSH session (MS or TRAD) |
+| 2 | Child of a Listener (S or SH) |
 | 3 | independent (SH) |
 | 4 | malformed (ANY) |
