--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -40,6 +40,14 @@ Other Session:
 [ username, destination, port ]
 ```
 ### Socket Organization:
+| Code | Name |
+| - | - |
+|MS | Master Socket |
+| S | Socket Forward (Local, Remote, or Dynamic) |
+| TRAD | Traditional Tunnel |
+| SH | SSH Session |
+
+
 These are organized into the following formats
 
 Master Socket:
