--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -15,7 +15,7 @@ ss -nap | grep "ssh\"" > /tmp/ssh_ss
 The next part of the program is to use regex to query these and put them into a list
 
 ### Process Organization
-| Code | Name |
+| ssh_type| Name |
 | - | - |
 |MS | Master Socket |
 | S | Socket Forward (Local, Remote, or Dynamic) |
