--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -32,7 +32,7 @@ the arguments have a few variations:
 
 Master Sockets:
 ```
-[ username, destination, port, socket_file ]
+[ socket_file, username, destination, port  ]
 ```
 Forward via MS:
 ```
