--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -61,7 +61,7 @@ Other Sockets:
 | ord_code | description |
 | - | - |
 | 0 | unassigned (DEFAULT) |
-| 1 | Parent of another SSH session (MS or TRAD) |
-| 2 | Child of a Listener (S or SH) |
-| 3 | independent (SH) |
-| 4 | malformed (ANY) |
+| 1 | Master Socket (parent) |
+| 2 | Socket Forward (child) |
+| 3 | Traditional Tunnel |
+| 4 | Other SSH Tunnel |
