--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -65,3 +65,8 @@ Other Sockets:
 | 2 | Socket Forward (child) |
 | 3 | Traditional Tunnel |
 | 4 | Other SSH Tunnel |
+
+## Part 3: Organize into branching structure
+```
+[ id, parent, type, [ps_list], [ss_list] ]
+```
