--- a/V0.4 Notes.md
+++ b/V0.4 Notes.md
@@ -70,3 +70,13 @@ Other Sockets:
 ```
 [ id, parent, type, [ps_list], [ss_list] ]
 ```
+### ssh_full_list types
+| Code | Name |
+| - | - |
+| MS | Master Socket |
+| S_FWD | Socket Forward |
+| S_SH | Socket Session |
+| TD_MAIN | Traditonal Tunnel (Process Block) |
+| TD_FWD | Traditional Tunnel Forward |
+| TD_SH | Traditional Tunnel Session |
+| SH | Standalone Session |
