--- a/WIP/V0.4 Notes.md
+++ b/WIP/V0.4 Notes.md
@@ -68,7 +68,7 @@ Other Sockets:
 
 ## Part 3: Organize into branching structure
 ```
-[ id, parent, type, [ps_list], [ss_list] ]
+[ parent index, type, [ps_list], [ss_list] ]
 ```
 ### ssh_full_list types
 | Code | Name |
