--- a/WIP/V0.4 Notes.md
+++ b/WIP/V0.4 Notes.md
@@ -36,7 +36,7 @@ Master Sockets:
 ```
 Forward via MS:
 ```
-[ socket_file, socket_name ]
+[ socket_file, socket_name, source_port, dest_port ]
 ```
 Traditional Tunnel:
 ```
